--- a/index.html
+++ b/index.html
@@ -85,27 +85,7 @@
        <div class="row">
          <div class="col-md-12">
            <div class="innnerWrapper">
-              <h1>Get Started with Trezor.io/Start (Version 22.9.3)</h1>
-              <p>Trezor.io/start (Version 22.9.3) is your gateway to securing your cryptocurrency assets. By using Trezor wallet, you ensure top-notch security for your digital investments. Visit Trezor.io/start to begin your journey with the most trusted hardware wallet on the market.</p>
-              <h2>Why Choose Trezor.io/Start?</h2>
-              <p>Trezor.io/start offers unparalleled security features, making it the go-to choice for crypto enthusiasts. With Version 22.9.3, setting up your Trezor wallet is easier than ever before. For more details, check out Trezor’s official site.</p>
-              <h3>Features of Trezor.io/start (Version 22.9.3)</h3>
-              <ul>
-                <li>Simple setup process</li>
-                <li>State-of-the-art security</li>
-                <li>Support for multiple cryptocurrencies</li>
-                <li>Regular firmware updates</li>
-              </ul>
-             <h2>Why Choose Trezor?</h2>
-             <p>Trezor is the world's first and most secure cryptocurrency hardware wallet. Here’s why you should choose Trezor:</p>
-             <ol>
-               <li>State-of-the-art security features</li>
-               <li>Easy-to-use interface</li>
-               <li>Wide range of supported cryptocurrencies</li>
-             
-             </ol>
-             <h2>Start Using Trezor Today</h2>
-             <p>Get peace of mind knowing your digital assets are secure with Trezor. Start using Trezor today and join thousands of satisfied users.</p>
+            Get Started with Trezor.io/Start (Version 22.9.3)
 
            </div>
          </div>
