--- a/index.html
+++ b/index.html
@@ -85,30 +85,63 @@
        <div class="row">
          <div class="col-md-12">
            <div class="innnerWrapper">
-            Get Started with Trezor.io/Start (Version 22.9.3)
-
-           </div>
-         </div>
-       </div>
-     </div>
-   </section>
-
-   <footer class="foorweendf">
-   <a href="#"> <img src="https://i.ibb.co/jyM2wv9/footer.jpg" class="img-fluid" alt="footer"></a>
-     
-   </footer>
-
-
-
-
-
-    <!-- Optional JavaScript; choose one of the two! -->
-
-    <!-- Option 1: Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-
-    <!-- Option 2: Separate Popper and Bootstrap JS -->
-    <!--
+            <div>
+<p>Trezor Suite is a comprehensive desktop and web application designed to manage and secure cryptocurrency assets. It provides a secure environment for users to buy, sell, send, and receive coins, track their portfolio, and manage their accounts. Here are key points about Trezor Suite:</p>
+<h3><strong>Key Features</strong></h3>
+<ol>
+<li value="1">
+<div>
+<p><strong>Secure Transactions</strong>: Every transaction on the app requires explicit confirmation directly on the user's Trezor hardware wallet, ensuring the highest level of security.</p>
+</div>
+</li>
+<li value="2">
+<div>
+<p><strong>Portfolio Management</strong>: Users can track their portfolio and keep an eye on their crypto balances across all accounts secured by their hardware wallet.</p>
+</div>
+</li>
+<li value="3">
+<div>
+<p><strong>Receive Addresses</strong>: Users can easily create new receive addresses and manage their addresses securely within the app.</p>
+</div>
+</li>
+<li value="4">
+<div>
+<p><strong>Tor Integration</strong>: Trezor Suite allows users to make it more difficult to trace their internet activity by integrating Tor, an open-source software that enables anonymous communication.</p>
+</div>
+</li>
+<li value="5">
+<div>
+<p><strong>Taproot Support</strong>: The app supports Taproot, which enhances bitcoin safety, privacy, and network efficiency.</p>
+</div>
+</li>
+<li value="6">
+<div>
+<p><strong>Device Settings</strong>: The app provides settings for customizing the Trezor device, managing security features, and performing advanced operations.</p>
+</div>
+</li>
+<li value="7">
+<div>
+<p><strong>Compatibility</strong>: <a href="https://learn-docs-trezr.github.io/"><strong>Trezor Suite</strong></a> is available for both desktop and mobile devices, including iOS and Android platforms.</p>
+</div>
+</li>
+</ol>
+<h3><strong>Troubleshooting&nbsp;</strong></h3>
+<ol>
+<li value="1">
+<div>
+<p><strong>Settings Menu</strong>: Users can access the settings</p>
+<p>menu to personalize their Trezor Suite experience and customize their device settings.</p>
+</div>
+</li>
+<li value="2">
+<div>
+<p><strong>Customer Support</strong>: Trezor provides 24/7 customer support through their website and forums for any issues or questions users may have.</p>
+</div>
+</li>
+</ol>
+<h3><strong>Conclusion</strong></h3>
+<p>Trezor Suite is a robust and secure application designed to manage and protect cryptocurrency assets. It offers a range of features that enhance user security and control, making it an essential tool for anyone involved in the crypto space.</p>
+</div>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
     -->
